PostgreSQL has a 'g' in it

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -46,7 +46,7 @@
 	<div class="resume-item">
 		<ul>
 			<li>Python, Django/DRF, C#, Clojure, Go</li>
-			<li>Elasticsearch, PostreSQL, MongoDB, SQL Server</li>
+			<li>Elasticsearch, PostgreSQL, MongoDB, SQL Server</li>
 			<li>Apache Storm, Apache Spark</li>
 			<li>Google Cloud Storage/Compute Engine</li>
 			<li>RESTful APIs, Object-Oriented design patterns</li>
