Print-friendly styles

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -15,6 +15,8 @@
 
         <h1 class="header-name">{{ site.resume_name }}</h1>
 
+	<h2 class="header-email">{{ site.resume_contact_email }}</h2>
+
         <div class="title-bar">
 
           <h2 class="header-title">{{ site.resume_title }}</h2>
