--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -39,6 +39,15 @@
     margin: 1rem 0 2rem;
   }
 
+  .header-email {
+    font-weight: 300;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    text-align: center;
+    margin: 0 0 2rem;
+    display: none;
+  }
+
   .title-bar {
     @include section_border;
     padding: .4rem 0;
