--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -46,15 +46,15 @@
 	</header>
 
 	<div class="resume-item">
-		<ul>
-			<li>Python, Django/DRF, C#, Clojure, Go</li>
-			<li>Elasticsearch, PostreSQL, MongoDB, SQL Server</li>
-			<li>Apache Storm, Apache Spark</li>
-			<li>Google Cloud Storage/Compute Engine</li>
-			<li>RESTful APIs, Object-Oriented design patterns</li>
-			<li>Agile, Scrum, Test-Driven Development</li>
-			<li>Offshore and distributed teams</li>
-			<li>Leadership</li>
+		<ul class="columns">
+			<li class="column one-half">Python, Django/DRF, C#, Clojure, Go</li>
+			<li class="column one-half">Elasticsearch, PostreSQL, MongoDB, SQL Server</li>
+			<li class="column one-half">Apache Storm, Apache Spark</li>
+			<li class="column one-half">Google Cloud Storage/Compute Engine</li>
+			<li class="column one-half">RESTful APIs, Object-Oriented design patterns</li>
+			<li class="column one-half">Agile, Scrum, Test-Driven Development</li>
+			<li class="column one-half">Offshore and distributed teams</li>
+			<li class="column one-half">Leadership</li>
 		</ul>
 	</div>
 
@@ -210,13 +210,13 @@
 	</header>
 
         <div class="resume-item">
-		<ul>
-			<li>ML Conf Seattle 2015 (Machine Learning)</li>
-			<li>PyCon US 2011,2014</li>
-			<li>MongoDB Seattle 2010, 2012</li>
-			<li>OSCON 2011</li>
-			<li>DjangoCon 2008</li>
-			<li>New Tech Seattle/Eastside meetups</li>
+		<ul class="columns">
+			<li class="column one-half">ML Conf Seattle 2015 (Machine Learning)</li>
+			<li class="column one-half">PyCon US 2011,2014</li>
+			<li class="column one-half">MongoDB Seattle 2010, 2012</li>
+			<li class="column one-half">OSCON 2011</li>
+			<li class="column one-half">DjangoCon 2008</li>
+			<li class="column one-half">New Tech Seattle/Eastside meetups</li>
 		</ul>
         </div>
 
