--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -10,7 +10,7 @@
       <header class="page-header">
 
         {% if site.resume_avatar == 'true' %}
-		<img src="images/me.jpg" alt="my photo" class="avatar">
+		<img src="images/avatar.jpg" alt="Matt Skone" class="avatar">
         {% endif %}
 
         <h1 class="header-name">{{ site.resume_name }}</h1>
@@ -42,17 +42,19 @@
 	<section class="content-section">
 	
 	<header class="section-header">
-		<h2>Skill Areas</h2>
+		<h2>skill areas</h2>
 	</header>
 
 	<div class="resume-item">
 		<ul class="columns">
 			<li class="column one-half">Python, Django/DRF, C#, Clojure, Go</li>
-			<li class="column one-half">Elasticsearch, PostgreSQL, MongoDB, SQL Server</li>
 			<li class="column one-half">Apache Storm, Apache Spark</li>
 			<li class="column one-half">Google Cloud Storage/Compute Engine</li>
-			<li class="column one-half">RESTful APIs, Object-Oriented design patterns</li>
+			<li class="column one-half">Elastic, PostgreSQL, MongoDB, SQL Server</li>
+			<li class="column one-half">Machine learning, statistics</li>
+			<li class="column one-half">AI for robotics</li>
 			<li class="column one-half">Agile, Scrum, Test-Driven Development</li>
+			<li class="column one-half">RESTful APIs, OO design patterns</li>
 			<li class="column one-half">Offshore and distributed teams</li>
 			<li class="column one-half">Leadership</li>
 		</ul>
@@ -67,7 +69,7 @@
 	<section class="content-section">
 
 	<header class="section-header">
-		<h2>Professional Experience</h2>
+		<h2>professional experience</h2>
 	</header>
 
 	<div class="resume-item">
@@ -75,21 +77,19 @@
 		<h4 class="resume-item-details">Senior Software Engineer, Machine Learning and Personalization &bull; 2015</h4>
 		<p class="resume-item-copy">Collaborated on high volume, low latency personalization solutions for $1B online retailer.</p>
 		<ul>
-			<li>Performed feature engineering and model training to drive increased sales by delivering a product experience personalized to customers' preferences.</li>
-			<li>Implemented new business rules in the Personalization API to reduce enterprise technical debt.</li>
-			<li>Go, Apache Spark, Google Cloud Compute and Storage, H2O machine learning platform</li>
+			<li>Performed feature engineering and model training to deliver a product experience personalized to customers' preferences.</li>
+			<li>Go, Apache Spark, Google Cloud Compute/Storage, H2O machine learning platform</li>
 		</ul>
 	</div>
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">ClipCard</h3>
 		<h4 class="resume-item-details">Lead Engineer, Developer Platforms &bull; 2013 &mdash; 2015</h4>
-		<p class="resume-item-copy">ClipCard is a new kind of productivity app that helps you see across your apps and accounts, find what you're looking for no matter where it lives, and do what you need quickly.</p>
+		<p class="resume-item-copy">Member of startup team developing a product to help customers find and act on content in personal, cloud-based apps such as Dropbox, Evernote, and Google Drive.</p>
  		<ul class="resume-item-list">
 			<li>Designed and developed new features for our service's core API, including interfaces, object models, search indexes and data stores.</li>
-			<li>Enabled new product features by creating new integrations between our service and third-party cloud service APIs, solving problems in areas of authentication, performance, backpressure, error handling, and data transformation.</li>
-			<li>Created and launched a successful and popular text-based integration for the Slack messaging application that brought ClipCard functionality directly into the Slack user experience.</li>
-			<li>Ensured reliability and scalability by implementing a distributed processing infrastructure for extract, transform, and load operations on stream data.</li>
+			<li>Integrated with third-party cloud service APIs, solving problems in areas of authentication, performance, backpressure, error handling, and data transformation.</li>
+			<li>Created and launched a text-based integration for the Slack messaging app that brought ClipCard functionality directly into the Slack user experience.</li>
 			<li>Python, Django/DRF, Apache Storm, Elasticsearch, PostgreSQL, Clojure</li>
           	</ul>
         </div>
@@ -107,18 +107,14 @@
 		<ul>
 			<li>Enabled $18 million in new revenue to date.</li>
 			<li>Solid, durable app remains in use eight years after first release.</li>
-			<li>C#, SQL Server, ASP.Net, HTML/CSS, Javascript.</li>
+			<li>C#, SQL Server, ASP.Net, CSS, Javascript.</li>
 		</ul>
         </div>
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">Expeditors International</h3>
 		<h4 class="resume-item-details">Data Warehouse Analyst &bull; 2003 &mdash; 2004</h4>
-		<p class="resume-item-copy"> Developed data warehouse and business intelligence applications for $5 billion international corporation.</p>
-		<ul>
-			<li>IBM DB2</li>
-			<li>Informatica extract, transform, and load (ETL) suite</li>
-		</ul>
+		<p class="resume-item-copy"> Developed data warehouse and business intelligence applications for $5B corporation.</p>
 	</div>
 
 	<div class="resume-item">
@@ -128,18 +124,14 @@
 		<ul>
 			<li>Served over 100 employees in five companies.</li>
 			<li>Reduced payroll processing time and errors by over 50%.</li>
-			<li>C#, SQL Server, ASP.Net, HTML, Javascript.</li>
+			<li>C#, SQL Server, ASP.Net, Javascript.</li>
 		</ul>
 	</div>
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">U.S. Navy</h3>
 		<h4 class="resume-item-details">Operations Center Watch Officer &bull; 2011 &mdash; 2012</h4>
-		<p class="resume-item-copy"> Monitored U.S. military operations throughout Europe, coordinated with U.S. and Allied headquarters, maintained clear lines of communication, and kept senior leadership informed.</p>
-		<ul>
-			<li>Awarded twice for outstanding initiative, leadership, and performance.</li>
-			<li>Instituted more rigorous training regimen that improved watch team readiness and proficiency in responding to crises.</li>
-		</ul>
+		<p class="resume-item-copy"> Monitored U.S. military operations throughout Europe, coordinated with U.S. and Allied headquarters.  First responder to international crises.  Awarded twice for outstanding initiative, leadership, and performance.</br></br>
 
 		<h4 class="resume-item-details">Commanding/Executive Officer &bull; 2001 &mdash; 2003</h4>
 		<p class="resume-item-copy"> Second-in-Command, then Commanding Officer of two patrol boat units. Solely responsible for organization, training and performance of 64 Sailors, four patrol boats and associated vehicles, weapons, and equipment, including wartime Persian Gulf deployment.</p>
@@ -159,13 +151,13 @@
 	<section class="content-section">
 
 	<header class="section-header">
-		<h2>Education</h2>
+		<h2>education</h2>
 	</header>
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">Georgia Institue of Technology</h3>
 		<h4 class="resume-item-details">Master of Science, Computer Science &bull; 2014 &mdash; 2017</h4>
-		<p class="resume-item-copy">Georgia Tech's online degree program includes courses in Machine Learning (completed), Knowledge-Based Artificial Intelligence (completed), AI for Robotics (completed), Computer Vision (in progress), Algorithms, and other topics. I am pursuing a dual specialization in Machine Learning and Computational Perception/Robotics.</p>
+		<p class="resume-item-copy">Georgia Tech's online degree program includes courses in Machine Learning, Artificial Intelligence, Algorithms, and other topics. I am pursuing a dual specialization in Machine Learning and Computational Perception/Robotics.</p>
 	</div>
 
 	<div class="resume-item">
@@ -177,41 +169,17 @@
 
       {% endif %}
 
-      {% if site.resume_section_projects %}
-      
-	<section class="content-section">
-
-        <header class="section-header">
-          <h2>Projects</h2>
-        </header>
-
-        <div class="resume-item">
-          <h3 class="resume-item-title"><a href="http://donutlocator.io">donutfinder.io</a></h3>
-          <h4 class="resume-item-details">Founder & Primary Developer &bull; 2012 &mdash; Present</h4>
-          <p class="resume-item-copy">Donut Locator is an open source node/ember app that lets users find donuts within a defined radius from their home.</p>
-        </div>
-
-        <div class="resume-item">
-          <h3 class="resume-item-title">Springfield Donut Eater's User Group</h3>
-          <h4 class="resume-item-details">Co-Founder & Organizer &bull; 2007 &mdash; Present</h4>
-          <p class="resume-item-copy">DEUG is a local monthly meetup in Springfield where we share all the latest tips and tricks for dat donut lifestyle. I organize the group, and typically eat most of the donuts.</p>
-        </div>
-
-      </section>
-
-      {% endif %}
-
       {% if site.resume_section_community %}
 
 	<section class="content-section">
 
 	<header class="section-header">
-		<h2>Tech Community</h2>
+		<h2>tech community</h2>
 	</header>
 
         <div class="resume-item">
 		<ul class="columns">
-			<li class="column one-half">ML Conf Seattle 2015 (Machine Learning)</li>
+			<li class="column one-half">Machine Learning Conf Seattle 2015</li>
 			<li class="column one-half">PyCon US 2011,2014</li>
 			<li class="column one-half">MongoDB Seattle 2010, 2012</li>
 			<li class="column one-half">OSCON 2011</li>
