Added Google Analytics hook

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+  {% include analytics.html %}
+
   {% include head.html %}
 
   <body class="theme-{% if site.resume_theme %}{{ site.resume_theme }}{% endif %}">
