Added CTL, removed Expeditors and HMS

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -54,7 +54,7 @@
 			<li class="column one-half">Google Cloud Storage/Compute Engine</li>
 			<li class="column one-half">Elastic, PostgreSQL, MongoDB, SQL Server</li>
 			<li class="column one-half">Machine learning, statistics</li>
-			<li class="column one-half">AI for robotics</li>
+			<li class="column one-half">Computational Perception/Robotics</li>
 			<li class="column one-half">Agile, Scrum, Test-Driven Development</li>
 			<li class="column one-half">RESTful APIs, OO design patterns</li>
 			<li class="column one-half">Offshore and distributed teams</li>
@@ -73,6 +73,17 @@
 	<header class="section-header">
 		<h2>professional experience</h2>
 	</header>
+
+	<div class="resume-item">
+		<h3 class="resume-item-title">CenturyLink Cloud</h3>
+		<h4 class="resume-item-details">Senior Lead Software Engineer &bull; 2016-Present</h4>
+		<p class="resume-item-copy">Develop platform, infrastructure, and orchestration for leading cloud computing service provider.  Improve features, reliability, and availability of 16 public cloud datacenters worldwide.</p>
+		<ul>
+			<li>Developed improvements to billing/invoicing systems to dramatically improve accuracy and speed.</li>
+			<li>Implemented Ansible to automate deployment and upgrades to datacenter infrastructure servers.</li>
+			<li>C#, Couchbase, Elasticsearch, Ansible</li>
+		</ul>
+	</div>
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">Zulily</h3>
@@ -112,23 +123,6 @@
 			<li>C#, SQL Server, ASP.Net, CSS, Javascript.</li>
 		</ul>
         </div>
-
-	<div class="resume-item">
-		<h3 class="resume-item-title">Expeditors International</h3>
-		<h4 class="resume-item-details">Data Warehouse Analyst &bull; 2003 &mdash; 2004</h4>
-		<p class="resume-item-copy"> Developed data warehouse and business intelligence applications for $5B corporation.</p>
-	</div>
-
-	<div class="resume-item">
-		<h3 class="resume-item-title">Harley Marine Services</h3>
-		<h4 class="resume-item-details">Systems Development Manager &bull; 2000 &mdash; 2003</h4>
-		<p class="resume-item-copy"> Individually responsible for ideation, development, testing and implementation of custom online payroll application for $20 million marine services corporation.</p>
-		<ul>
-			<li>Served over 100 employees in five companies.</li>
-			<li>Reduced payroll processing time and errors by over 50%.</li>
-			<li>C#, SQL Server, ASP.Net, Javascript.</li>
-		</ul>
-	</div>
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">U.S. Navy</h3>
