--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -54,7 +54,7 @@
 			<li class="column one-half">Google Cloud Storage/Compute Engine</li>
 			<li class="column one-half">Elastic, PostgreSQL, MongoDB, SQL Server</li>
 			<li class="column one-half">Machine learning, statistics</li>
-			<li class="column one-half">Computational Perception/Robotics</li>
+			<li class="column one-half">Computational Perception/AI</li>
 			<li class="column one-half">Agile, Scrum, Test-Driven Development</li>
 			<li class="column one-half">RESTful APIs, OO design patterns</li>
 			<li class="column one-half">Offshore and distributed teams</li>
@@ -77,9 +77,10 @@
 	<div class="resume-item">
 		<h3 class="resume-item-title">CenturyLink Cloud</h3>
 		<h4 class="resume-item-details">Senior Lead Software Engineer &bull; 2016-Present</h4>
-		<p class="resume-item-copy">Develop platform, infrastructure, and orchestration for leading cloud computing service provider.  Improve features, reliability, and availability of 16 public cloud datacenters worldwide.</p>
+		<p class="resume-item-copy">Develop product platform, infrastructure, and orchestration for leading cloud computing service provider.  Improve features, reliability, and availability of 16 public cloud datacenters worldwide.</p>
 		<ul>
-			<li>Developed improvements to billing/invoicing systems to dramatically improve accuracy and speed.</li>
+			<li>Developed improvements to invoicing systems to dramatically improve accuracy and speed.</li>
+			<li>Led early design work for an enterprise Billing-as-a-Service platform.</li>
 			<li>Implemented Ansible to automate deployment and upgrades to datacenter infrastructure servers.</li>
 			<li>C#, Couchbase, Elasticsearch, Ansible</li>
 		</ul>
