Minor edits to recent experience

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="executive-summary">
-		<p>15 years of proven experience designing and implementing complex software solutions for new products. Dedicated to elegance and quality in code. Accomplished coder, excellent communicator, creative problem-solver, experienced leader. Organized, self-motivated, and passionate about learning.</p>
+		<p>15 years of proven experience designing and implementing complex software solutions for new products. Dedicated to elegance and quality in code. Accomplished coder, team player, excellent communicator, creative problem-solver, experienced leader. Organized, self-motivated, and passionate about learning.</p>
 	</div>
 
         {% if site.resume_looking_for_work == 'yes' %}
@@ -49,16 +49,16 @@
 
 	<div class="resume-item">
 		<ul class="columns">
-			<li class="column one-half">Python, Django/DRF, C#, Clojure, Go</li>
-			<li class="column one-half">Apache Storm, Apache Spark</li>
-			<li class="column one-half">Google Cloud Storage/Compute Engine</li>
-			<li class="column one-half">Elastic, PostgreSQL, MongoDB, SQL Server</li>
-			<li class="column one-half">Machine learning, statistics</li>
-			<li class="column one-half">Computational Perception/Robotics</li>
-			<li class="column one-half">Agile, Scrum, Test-Driven Development</li>
-			<li class="column one-half">RESTful APIs, OO design patterns</li>
-			<li class="column one-half">Offshore and distributed teams</li>
-			<li class="column one-half">Leadership</li>
+            <li class="column one-half">Python, Django/DRF, C#, Clojure, Go</li>
+            <li class="column one-half">Machine Learning, AI</li>
+            <li class="column one-half">Elastic, PostgreSQL, Couch, SQL Server</li>
+            <li class="column one-half">Google Cloud Storage/Compute Engine</li>
+            <li class="column one-half">Apache Spark, Apache Storm</li>
+            <li class="column one-half">Ansible, Jenkins, Continuous Integration</li>
+            <li class="column one-half">Agile, Scrum, Kanban, TDD</li>
+            <li class="column one-half">RESTful APIs, OO design patterns</li>
+            <li class="column one-half">Offshore and distributed teams</li>
+            <li class="column one-half">Leadership</li>
 		</ul>
 	</div>
 
@@ -79,9 +79,10 @@
 		<h4 class="resume-item-details">Senior Lead Software Engineer &bull; 2016-Present</h4>
 		<p class="resume-item-copy">Develop platform, infrastructure, and orchestration for leading cloud computing service provider.  Improve features, reliability, and availability of 16 public cloud datacenters worldwide.</p>
 		<ul>
-			<li>Developed improvements to billing/invoicing systems to dramatically improve accuracy and speed.</li>
-			<li>Implemented Ansible to automate deployment and upgrades to datacenter infrastructure servers.</li>
-			<li>C#, Couchbase, Elasticsearch, Ansible</li>
+            <li>Improved customer-facing RESTful APIs for vitualization and cloud VM management</li>
+            <li>Developed improvements to invoicing systems to dramatically improve accuracy and speed.</li>
+            <li>Implemented Ansible to automate deployment and upgrades to datacenter infrastructure servers.</li>
+            <li>C#, Couchbase, Elasticsearch, Ansible, VMWare</li>
 		</ul>
 	</div>
 
