Minor wording changes

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -77,7 +77,7 @@
 	<div class="resume-item">
 		<h3 class="resume-item-title">CenturyLink Cloud</h3>
 		<h4 class="resume-item-details">Senior Lead Software Engineer &bull; 2016-Present</h4>
-		<p class="resume-item-copy">Develop product platform, infrastructure, and orchestration for leading cloud computing service provider.  Improve features, reliability, and availability of 16 public cloud datacenters worldwide.</p>
+		<p class="resume-item-copy">Developed platform APIs, infrastructure, and orchestration for leading cloud computing service provider.  Improved features, reliability, and availability of 16 public cloud datacenters worldwide.</p>
 		<ul>
             <li>Improved customer-facing RESTful APIs for vitualization and cloud VM management</li>
             <li>Developed improvements to invoicing systems to dramatically improve accuracy and speed.</li>
@@ -111,7 +111,7 @@
 	<div class="resume-item">
 		<h3 class="resume-item-title">Lexis-Nexis</h3>
 		<h4 class="resume-item-details">Senior Software Engineer &bull; 2004 &mdash; 2013</h4>
-		<p class="resume-item-copy"><i>Court Docket project</i> &mdash; Technical lead and lead developer of 14-member team to serialize and enrich several billion rows relational data into XML.</p>
+		<p class="resume-item-copy"><i>Court Docket project</i> &mdash; Technical lead and lead developer of 14-member team to serialize and enrich several billion rows relational data.</p>
 		<ul>
 			<li>Ensured vital core content was available for launch of new, multi-million-dollar flagship research product.</li>
 			<li>Succeeded in the face of highly fluid team membership and shifting specifications.</li>
