Updated for Vulcan

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -49,15 +49,15 @@
 
 	<div class="resume-item">
 		<ul class="columns">
-            <li class="column one-half">Python, Django/DRF, C#, Clojure, Go</li>
+            <li class="column one-half">Python, C#, Clojure, Golang</li>
             <li class="column one-half">Machine Learning, AI</li>
-            <li class="column one-half">Elastic, PostgreSQL, Couch, SQL Server</li>
-            <li class="column one-half">Google Cloud Storage/Compute Engine</li>
-            <li class="column one-half">Apache Spark, Apache Storm</li>
-            <li class="column one-half">Ansible, Jenkins, Continuous Integration</li>
+            <li class="column one-half">Docker, Kubernetes</li>
+            <li class="column one-half">Google Cloud Platform</li>
+            <li class="column one-half">Azure Cloud</li>
+            <li class="column one-half">Elastic, Kafka, PostgreSQL</li>
+            <li class="column one-half">Concourse CI, Ansible</li>
             <li class="column one-half">Agile, Scrum, Kanban, TDD</li>
-            <li class="column one-half">RESTful APIs, OO design patterns</li>
-            <li class="column one-half">Offshore and distributed teams</li>
+            <li class="column one-half">RESTful APIs, Clean Architecture</li>
             <li class="column one-half">Leadership</li>
 		</ul>
 	</div>
@@ -75,11 +75,23 @@
 	</header>
 
 	<div class="resume-item">
+		<h3 class="resume-item-title">Vulcan, Inc.</h3>
+		<h4 class="resume-item-details">Software Engineering Tech Lead &bull; 2017-Present</h4>
+		<p class="resume-item-copy">Developed cloud infrastructure automation for global, multi-million dollar Philanthropy projects.  Enabled reliable, repeatable deployments to production environments on multiple cloud providers.</p>
+		<ul>
+            <li>Designed Kubernetes deployments for containerized applications in the cloud.</li>
+            <li>Built continuous integration/continuous deployment pipelines on Concourse CI.</li>
+            <li>Envisioned, designed, and built cloud-agnostic tooling to automate infrastructure provisioning.</li>
+            <li>Python, Docker, Kubernetes, Google Cloud Platform, Azure Cloud, Concourse CI</li>
+		</ul>
+	</div>
+
+	<div class="resume-item">
 		<h3 class="resume-item-title">CenturyLink Cloud</h3>
-		<h4 class="resume-item-details">Senior Lead Software Engineer &bull; 2016-Present</h4>
+		<h4 class="resume-item-details">Senior Lead Software Engineer &bull; 2016-2017</h4>
 		<p class="resume-item-copy">Developed platform APIs, infrastructure, and orchestration for leading cloud computing service provider.  Improved features, reliability, and availability of 16 public cloud datacenters worldwide.</p>
 		<ul>
-            <li>Improved customer-facing RESTful APIs for vitualization and cloud VM management</li>
+            <li>Improved customer-facing RESTful APIs for vitualization and cloud VM management.</li>
             <li>Developed improvements to invoicing systems to dramatically improve accuracy and speed.</li>
             <li>Implemented Ansible to automate deployment and upgrades to datacenter infrastructure servers.</li>
             <li>C#, Couchbase, Elasticsearch, Ansible, VMWare</li>
@@ -127,6 +139,7 @@
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">U.S. Navy</h3>
+		<h4 class="resume-item-details">Current TS/SCI security clearance</h4>
 		<h4 class="resume-item-details">Operations Center Watch Officer &bull; 2011 &mdash; 2012</h4>
 		<p class="resume-item-copy"> Monitored U.S. military operations throughout Europe, coordinated with U.S. and Allied headquarters.  First responder to international crises.  Awarded twice for outstanding initiative, leadership, and performance.</br></br>
 
@@ -153,7 +166,7 @@
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">Georgia Institue of Technology</h3>
-		<h4 class="resume-item-details">Master of Science, Computer Science &bull; 2014 &mdash; 2017</h4>
+		<h4 class="resume-item-details">Master of Science, Computer Science &bull; 2014 &mdash; 2019</h4>
 		<p class="resume-item-copy">Georgia Tech's online degree program includes courses in Machine Learning, Artificial Intelligence, Algorithms, and other topics. I am pursuing a dual specialization in Machine Learning and Computational Perception/Robotics.</p>
 	</div>
 
@@ -176,8 +189,8 @@
 
         <div class="resume-item">
 		<ul class="columns">
+			<li class="column one-half">PyCon US 2011, 2014, 2017, 2018</li>
 			<li class="column one-half">Machine Learning Conf Seattle 2015</li>
-			<li class="column one-half">PyCon US 2011,2014</li>
 			<li class="column one-half">MongoDB Seattle 2010, 2012</li>
 			<li class="column one-half">OSCON 2011</li>
 			<li class="column one-half">DjangoCon 2008</li>
