Updated Vulcan title and Navy content

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -76,7 +76,7 @@
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">Vulcan, Inc.</h3>
-		<h4 class="resume-item-details">Software Engineering Tech Lead &bull; 2017-Present</h4>
+		<h4 class="resume-item-details">Senior Software Engineer &bull; 2017-Present</h4>
 		<p class="resume-item-copy">Developed cloud infrastructure automation for global, multi-million dollar Philanthropy projects.  Enabled reliable, repeatable deployments to production environments on multiple cloud providers.</p>
 		<ul>
             <li>Designed Kubernetes deployments for containerized applications in the cloud.</li>
@@ -138,8 +138,13 @@
         </div>
 
 	<div class="resume-item">
-		<h3 class="resume-item-title">U.S. Navy</h3>
-		<h4 class="resume-item-details">Current TS/SCI security clearance</h4>
+		<h3 class="resume-item-title">U.S. Navy (excerpts)</h3>
+		<h4 class="resume-item-details">Commanding Officer &bull; 2018 &mdash; Present</h4>
+		<p class="resume-item-copy">Commanding Officer of 30 Sailors supporting U.S. Indo-Pacific Command, the senior U.S. military headquarters in the Indo-Asia Pacific region.</p>
+		<ul>
+			<li>Current TS/SCI security clearance</li>
+		</ul>
+
 		<h4 class="resume-item-details">Operations Center Watch Officer &bull; 2011 &mdash; 2012</h4>
 		<p class="resume-item-copy"> Monitored U.S. military operations throughout Europe, coordinated with U.S. and Allied headquarters.  First responder to international crises.  Awarded twice for outstanding initiative, leadership, and performance.</br></br>
 
