Updated skills, education, events

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -53,9 +53,9 @@
             <li class="column one-half">Machine Learning, AI</li>
             <li class="column one-half">Docker, Kubernetes</li>
             <li class="column one-half">Google Cloud Platform</li>
-            <li class="column one-half">Azure Cloud</li>
+            <li class="column one-half">Terraform, Ansible</li>
             <li class="column one-half">Elastic, Kafka, PostgreSQL</li>
-            <li class="column one-half">Concourse CI, Ansible</li>
+            <li class="column one-half">Circle CI, Concourse CI</li>
             <li class="column one-half">Agile, Scrum, Kanban, TDD</li>
             <li class="column one-half">RESTful APIs, Clean Architecture</li>
             <li class="column one-half">Leadership</li>
@@ -171,8 +171,7 @@
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">Georgia Institue of Technology</h3>
-		<h4 class="resume-item-details">Master of Science, Computer Science &bull; 2014 &mdash; 2019</h4>
-		<p class="resume-item-copy">Georgia Tech's online degree program includes courses in Machine Learning, Artificial Intelligence, Algorithms, and other topics. I am pursuing a dual specialization in Machine Learning and Computational Perception/Robotics.</p>
+		<h4 class="resume-item-details">Master of Science, Computer Science (Machine Learning) &bull; 2014 &mdash; 2019</h4>
 	</div>
 
 	<div class="resume-item">
@@ -195,6 +194,7 @@
         <div class="resume-item">
 		<ul class="columns">
 			<li class="column one-half">PyCon US 2011, 2014, 2017, 2018</li>
+			<li class="column one-half">Google Cloud Next 2019</li>
 			<li class="column one-half">Machine Learning Conf Seattle 2015</li>
 			<li class="column one-half">MongoDB Seattle 2010, 2012</li>
 			<li class="column one-half">OSCON 2011</li>
