--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -91,7 +91,7 @@
 		<h4 class="resume-item-details">Senior Lead Software Engineer &bull; 2016-2017</h4>
 		<p class="resume-item-copy">Developed platform APIs, infrastructure, and orchestration for leading cloud computing service provider.  Improved features, reliability, and availability of 16 public cloud datacenters worldwide.</p>
 		<ul>
-            <li>Improved customer-facing RESTful APIs for vitualization and cloud VM management.</li>
+            <li>Improved customer-facing RESTful APIs for virtualization and cloud VM management.</li>
             <li>Developed improvements to invoicing systems to dramatically improve accuracy and speed.</li>
             <li>Implemented Ansible to automate deployment and upgrades to datacenter infrastructure servers.</li>
             <li>C#, Couchbase, Elasticsearch, Ansible, VMWare</li>
