Update with Allen Coral Atlas experience

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -49,12 +49,12 @@
 
 	<div class="resume-item">
 		<ul class="columns">
-            <li class="column one-half">Python, C#, Clojure, Golang</li>
+            <li class="column one-half">Python, C#, Clojure, Bash</li>
             <li class="column one-half">Machine Learning, AI</li>
             <li class="column one-half">Docker, Kubernetes</li>
             <li class="column one-half">Google Cloud Platform</li>
             <li class="column one-half">Terraform, Ansible</li>
-            <li class="column one-half">Elastic, Kafka, PostgreSQL</li>
+            <li class="column one-half">Elastic, PostgreSQL</li>
             <li class="column one-half">Circle CI, Concourse CI</li>
             <li class="column one-half">Agile, Scrum, Kanban, TDD</li>
             <li class="column one-half">RESTful APIs, Clean Architecture</li>
@@ -77,12 +77,20 @@
 	<div class="resume-item">
 		<h3 class="resume-item-title">Vulcan, Inc.</h3>
 		<h4 class="resume-item-details">Senior Software Engineer &bull; 2017-Present</h4>
-		<p class="resume-item-copy">Developed cloud infrastructure automation for global, multi-million dollar Philanthropy projects.  Enabled reliable, repeatable deployments to production environments on multiple cloud providers.</p>
+		<p class="resume-item-copy"><i>Data Processing Pipeline Automation</i> &mdash; <a href="https://allencoralatlas.org">Allen Coral Atlas</a></p>
 		<ul>
+			<li>Designed and implemented automated pipelines for processing terabytes of geospatial satellite imagery.</li>
+			<li>Implemented scientific imagery analysis algorithms such as water depth estimation and underwater feature change detection.</li>
+            <li>Python, Docker, Kubernetes, Apache Airflow, Google Cloud Composer, Argo Workflows, Google Earth Engine, Geospatial Data Abstraction Library (GDAL)</li>
+		</ul>
+		<p class="resume-item-copy"><i>Infrastructure Automation</i> &mdash; Technical Lead for 5-person DevOps team.</p>
+		<ul>
+			<li>Developed cloud infrastructure automation for global, multi-million-dollar Philanthropy projects.</li>
+			<li>Enabled reliable, repeatable provisioning and deployment to production environments on multiple cloud providers.</li>
             <li>Designed Kubernetes deployments for containerized applications in the cloud.</li>
-            <li>Built continuous integration/continuous deployment pipelines on Concourse CI.</li>
+            <li>Designed and built continuous integration/continuous deployment pipelines.</li>
             <li>Envisioned, designed, and built cloud-agnostic tooling to automate infrastructure provisioning.</li>
-            <li>Python, Docker, Kubernetes, Google Cloud Platform, Azure Cloud, Concourse CI</li>
+            <li>Python, Bash, Docker, Kubernetes, Terraform, Google Cloud Platform, Azure Cloud, Circle CI, Concourse CI</li>
 		</ul>
 	</div>
 
@@ -131,8 +139,6 @@
 		</ul>
 		<p class="resume-item-copy"><i>Operations Management application</i> &mdash; Creator of web-based operations management and order fulfillment application. Performed business analysis, system design, full-stack development, deployment, support, and project management.</p>
 		<ul>
-			<li>Enabled $18 million in new revenue to date.</li>
-			<li>Solid, durable app remains in use eight years after first release.</li>
 			<li>C#, SQL Server, ASP.Net, CSS, Javascript.</li>
 		</ul>
         </div>
