--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -75,8 +75,20 @@
 	</header>
 
 	<div class="resume-item">
+		<h3 class="resume-item-title">Arizona State University</h3>
+		<h4 class="resume-item-details">Principal Software Engineer &bull; 2021-Present</h4>
+		<p class="resume-item-copy">Lead engineer for the <a href="https://allencoralatlas.org">Allen Coral Atlas</a>, responsible for:</p>
+		<ul>
+			<li>Directing engineering strategy in collaboration with Atlas program leadership</li>
+			<li>Planning and executing engineering team outcomes to meet the strategic vision for the Atlas</li>
+			<li>Coordinating engineering and scientific efforts with Vulcan Inc, the University of Queensland, the National Geographic Society, and other partner organizations</li>
+			<li>Training and mentoring junior engineers, students, and interns</li>
+		</ul>
+	</div>
+
+	<div class="resume-item">
 		<h3 class="resume-item-title">Vulcan, Inc.</h3>
-		<h4 class="resume-item-details">Senior Software Engineer &bull; 2017-Present</h4>
+		<h4 class="resume-item-details">Senior Software Engineer &bull; 2017-2020</h4>
 		<p class="resume-item-copy"><i>Data Processing Pipeline Automation</i> &mdash; <a href="https://allencoralatlas.org">Allen Coral Atlas</a></p>
 		<ul>
 			<li>Designed and implemented automated pipelines for processing terabytes of geospatial satellite imagery.</li>
