--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="executive-summary">
-		<p>15 years of proven experience designing and implementing complex software solutions for new products. Dedicated to elegance and quality in code. Accomplished coder, team player, excellent communicator, creative problem-solver, experienced leader. Organized, self-motivated, and passionate about learning.</p>
+		<p>20 years of proven experience designing and implementing complex software solutions for new products. Dedicated to elegance and quality in code. Accomplished coder, team player, excellent communicator, creative problem-solver, experienced leader. Organized, self-motivated, and passionate about learning.</p>
 	</div>
 
         {% if site.resume_looking_for_work == 'yes' %}
@@ -52,6 +52,7 @@
             <li class="column one-half">Python, C#, Clojure, Bash</li>
             <li class="column one-half">Machine Learning, AI</li>
             <li class="column one-half">Docker, Kubernetes</li>
+            <li class="column one-half">Geospatial Data Analysis</li>
             <li class="column one-half">Google Cloud Platform</li>
             <li class="column one-half">Terraform, Ansible</li>
             <li class="column one-half">Elastic, PostgreSQL</li>
@@ -93,7 +94,7 @@
 		<ul>
 			<li>Designed and implemented automated pipelines for processing terabytes of geospatial satellite imagery.</li>
 			<li>Implemented scientific imagery analysis algorithms such as water depth estimation and underwater feature change detection.</li>
-            <li>Python, Docker, Kubernetes, Apache Airflow, Google Cloud Composer, Argo Workflows, Google Earth Engine, Geospatial Data Abstraction Library (GDAL)</li>
+            <li>Python, Docker, Kubernetes, Apache Airflow, Argo Workflows, Google Earth Engine, Geospatial Data Abstraction Library (GDAL)</li>
 		</ul>
 		<p class="resume-item-copy"><i>Infrastructure Automation</i> &mdash; Technical Lead for 5-person DevOps team.</p>
 		<ul>
@@ -157,7 +158,7 @@
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">U.S. Navy (excerpts)</h3>
-		<h4 class="resume-item-details">Commanding Officer &bull; 2018 &mdash; Present</h4>
+		<h4 class="resume-item-details">Commanding Officer &bull; 2018 &mdash; 2022</h4>
 		<p class="resume-item-copy">Commanding Officer of 30 Sailors supporting U.S. Indo-Pacific Command, the senior U.S. military headquarters in the Indo-Asia Pacific region.</p>
 		<ul>
 			<li>Current TS/SCI security clearance</li>
@@ -189,7 +190,7 @@
 
 	<div class="resume-item">
 		<h3 class="resume-item-title">Georgia Institue of Technology</h3>
-		<h4 class="resume-item-details">Master of Science, Computer Science (Machine Learning) &bull; 2014 &mdash; 2019</h4>
+		<h4 class="resume-item-details">Master of Science, Computer Science (Machine Learning) &bull; 2019</h4>
 	</div>
 
 	<div class="resume-item">
@@ -211,7 +212,7 @@
 
         <div class="resume-item">
 		<ul class="columns">
-			<li class="column one-half">PyCon US 2011, 2014, 2017, 2018</li>
+			<li class="column one-half">PyCon US 2011, 2014, 2017, 2018, 2022</li>
 			<li class="column one-half">Google Cloud Next 2019</li>
 			<li class="column one-half">Machine Learning Conf Seattle 2015</li>
 			<li class="column one-half">MongoDB Seattle 2010, 2012</li>
