Update security clearance

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -161,7 +161,7 @@
 		<h4 class="resume-item-details">Commanding Officer &bull; 2018 &mdash; 2022</h4>
 		<p class="resume-item-copy">Commanding Officer of 30 Sailors supporting U.S. Indo-Pacific Command, the senior U.S. military headquarters in the Indo-Asia Pacific region.</p>
 		<ul>
-			<li>Current TS/SCI security clearance</li>
+			<li>TS/SCI security clearance basis OPM SSBI 20 Jan 2017</li>
 		</ul>
 
 		<h4 class="resume-item-details">Operations Center Watch Officer &bull; 2011 &mdash; 2012</h4>
